# spot

./: CLAUDE.md  Cargo.toml  README.md
src/: config.rs  display.rs  main.rs
src/commands/: alias.rs  auth.rs  controls.rs  mod.rs  now.rs  play.rs  search.rs
src/spotify/: api.rs  applescript.rs  auth.rs  mod.rs
